Fix width of bill when only the loader is visible

--- a/wikilegis/static/styles/templates/bill/_content.scss
+++ b/wikilegis/static/styles/templates/bill/_content.scss
@@ -1,5 +1,6 @@
 .bill__content-wrapper {
   background-color: $color-gray-95;
+  flex: 1 1 auto;
   overflow-y: auto;
   will-change: transform;
 
